tests/invalid/array_index_type.f77
PROGRAM ARRAYERR
INTEGER A(5)
LOGICAL I
I = .TRUE.
A(I) = 10
END
